# viennetta-gb

./: .gitignore  Cargo.toml  LICENSE  README.md  disasm.json  disasm_table.py  imgui.ini  instructions.csv  instructions.xlsx  run_blaargs.py
benches/: get_tile.rs  ppu.rs
libretro/: Cargo.toml
libretro/src/: lib.rs
log_comparer/: compare_logs.py
screen/: Cargo.toml
screen/src/: main.rs
src/: hardware.rs  lib.rs  main.rs  ui.rs
src/hardware/: boot_rom.rs  cpu.rs  io.rs  memory.rs  ram.rs
src/hardware/cpu/: cycles.rs  registers.rs
src/hardware/io/: apu.rs  cart.rs  joypad.rs  ppu.rs  timer.rs
src/hardware/io/apu/: custom_wave.rs  square_wave.rs  white_noise.rs
src/hardware/io/ppu/: fifo.rs
src/ui/: gui.rs  io.rs  libretro.rs  libretro_core.rs
src/ui/io/: graphics.rs  sound.rs  timer.rs
src/ui/libretro/: libretro_core.rs  libretro_utils.rs
standalone/: Cargo.toml
standalone/src/: main.rs
tests/: build.sh  vram_dma.asm  wram-test.asm
timer-test-source/: build.bat  main.asm  timer-test.gb
viennetta_gb/: Cargo.toml
viennetta_gb/src/: disasm.rs  hardware.rs  lib.rs  main.rs
viennetta_gb/src/hardware/: boot_rom.rs  cpu.rs  io.rs
viennetta_gb/src/hardware/cpu/: registers.rs
viennetta_gb/src/hardware/io/: cart.rs  ppu.rs  serial.rs  timer.rs
viennetta_gb/src/hardware/io/apu/: custom_wave.rs
webgpu/: Cargo.toml  index.html
webgpu/src/: main.rs
